--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ section>h1{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        gap: 8px;
     }
 
     .pf-navbar ul{
